--- a/index.html
+++ b/index.html
@@ -7,16 +7,27 @@
     <title>Vmax Mobile Auto Detail</title>
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
-    <section class="banner">
-        <img src="assets/images/logo.png" class="center-logo">
-    </section>
-    <div class="center">
-        <i class="fa-brands fa-instagram white center"></i>
-        <i class="fa-brands fa-facebook white"></i>    
+    <div class=" banner">
+        <img src="assets/images/logo2.png" class="center-logo">
     </div>
+
+    <section class="container">
+        <div class="row">
+            <div class="col">
+            </div>
+            <div class="col white">773 444-4444</div>
+            <div class="col">
+                    <i class="fa-brands fa-instagram white"></i>
+                    <i class="fa-brands fa-facebook white"></i>        
+            </div>
+        
+        </div>
+    </section>
 
 </body>
 </html>
