--- a/index.html
+++ b/index.html
@@ -12,21 +12,46 @@
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
-    <div class=" banner">
+    <!-- HEADER AND LOGO -->
+    <section class="header">
         <img src="assets/images/logo2.png" class="center-logo">
+    </section>
+
+    <!-- SOCIAL BAR (LINKS TO SOCIAL NETWORKS AND PHONE) -->
+    <div class="social-bar">
+        <a href="https://www.instagram.com" class="white">
+            <h1>
+                <i class="fa-brands fa-instagram"></i>
+            </h1>
+        </a>
+        <a href="https://www.facebook.com" class="white">
+            <h1>
+                <i class="fa-brands fa-square-facebook"></i>
+            </h1>
+        </a>
+        <a href="tel:+17734416970" class="white">
+            <h1>
+                <i class="fa-solid fa-phone"></i>
+            </h1>
+        </a>
     </div>
 
-    <section class="container">
-        <div class="row">
-            <div class="col">
-            </div>
-            <div class="col white">773 444-4444</div>
-            <div class="col">
-                    <i class="fa-brands fa-instagram white"></i>
-                    <i class="fa-brands fa-facebook white"></i>        
-            </div>
-        
-        </div>
+    <section class="contianer relative-carousel">
+         <div class="row">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./assets/images/carousel/pexels-erik-mclean-4876654(1).jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/carousel/pexels-erik-mclean-4876648(2).jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/carousel/pexels-erik-mclean-4876654(1).jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+              </div>
+         </div>
     </section>
 
 </body>
