--- a/index.html
+++ b/index.html
@@ -36,21 +36,46 @@
         </a>
     </div>
 
-    <section class="contianer relative-carousel">
-         <div class="row">
+    <section class="relative-carousel">
+         <div class="">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./assets/images/carousel/pexels-erik-mclean-4876654(1).jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/images/carousel/pexels-erik-mclean-4876654(1).jpg" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Service at your home</h2>
+                        <p>Or any place or your preference</p>
+                      </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="./assets/images/carousel/pexels-erik-mclean-4876648(2).jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/images/carousel/pexels-erik-mclean-4876648(2).jpg" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Detailing service</h2>
+                        <p>Our professional staff will take care of your vehicle</p>
+                      </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="./assets/images/carousel/pexels-erik-mclean-4876654(1).jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/images/carousel/pexels-erik-mclean-4876654(1).jpg" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Monthly plans</h2>
+                        <p>And easy reschedule</p>
+                      </div>
                   </div>
                 </div>
               </div>
+         </div>
+         <br />
+         <br>
+         <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img src="./assets/images/pexels-khunkorn-laowisit-5233261(Our-peolple).jpg" class="img-fluid">
+                </div>
+                <div class="col white mx-auto">
+                    <p class="center">Our professional people is well training and reliable, they take care of any of your vehicles as their own vehicles.</p>
+                </div>
+             </div>
+    
          </div>
     </section>
 
