New picutres added, social network, email and phone links added

--- a/index.html
+++ b/index.html
@@ -19,19 +19,29 @@
 
     <!-- SOCIAL BAR (LINKS TO SOCIAL NETWORKS AND PHONE) -->
     <div class="social-bar">
-        <a href="https://www.instagram.com" class="white">
+        <a href="tel:+17734416970" class="white">
+            <h1>
+                <i class="fa-solid fa-phone"></i>
+            </h1>
+        </a>
+        <a href="https://www.instagram.com/vmaxmobileautodetail" class="white">
             <h1>
                 <i class="fa-brands fa-instagram"></i>
             </h1>
         </a>
-        <a href="https://www.facebook.com" class="white">
+        <a href="https://www.facebook.com/vmaxmobileautodetail" class="white">
             <h1>
                 <i class="fa-brands fa-square-facebook"></i>
             </h1>
         </a>
-        <a href="tel:+17734416970" class="white">
+        <a href="https://wa.me/17734416970" class="white">
             <h1>
-                <i class="fa-solid fa-phone"></i>
+                <i class="fa-brands fa-whatsapp"></i>
+            </h1>
+        </a>
+        <a href="mailto:vmaxmobileautodetail@gmail.com" class="white">
+            <h1>
+                <i class="fa-solid fa-envelope"></i>
             </h1>
         </a>
     </div>
@@ -41,26 +51,41 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./assets/images/carousel/pexels-erik-mclean-4876654(1).jpg" class="d-block w-100">
-                    <div class="carousel-caption d-none d-md-block">
+                    <img src="./assets/images/carousel/Per6.jpg" class="d-block w-100 img-car">
+                    <div class="carousel-caption d-md-block">
                         <h2>Service at your home</h2>
                         <p>Or any place or your preference</p>
                       </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="./assets/images/carousel/pexels-erik-mclean-4876648(2).jpg" class="d-block w-100">
-                    <div class="carousel-caption d-none d-md-block">
+                    <img src="./assets/images/carousel/Per5.jpg" class="d-block w-100 img-car">
+                    <div class="carousel-caption d-md-block">
                         <h2>Detailing service</h2>
                         <p>Our professional staff will take care of your vehicle</p>
                       </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="./assets/images/carousel/pexels-erik-mclean-4876654(1).jpg" class="d-block w-100">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h2>Monthly plans</h2>
-                        <p>And easy reschedule</p>
+                    <img src="./assets/images/carousel/Per7.jpg" class="d-block w-100 img-car">
+                    <div class="carousel-caption d-md-block">
+                        <h2>Flexible schedule</h2>
+                        <p>We are available to fit on your routine</p>
                       </div>
                   </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/carousel/Comm3.jpg" class="d-block w-100 img-car">
+                    <div class="carousel-caption d-md-block">
+                        <h2>Any type of vehicles</h2>
+                        <p>Personal and commercial vehicles services</p>
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/carousel/Comm4.jpg" class="d-block w-100 img-car">
+                    <div class="carousel-caption d-md-block">
+                        <h2>Reliable workers</h2>
+                        <p>Professional service in your home</p>
+                      </div>
+                  </div>
+
                 </div>
               </div>
          </div>
