Bootstrap Cards created

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                 <i class="fa-solid fa-envelope"></i>
             </h1>
         </a>
+        <!-- **************************************************** PENDING MX FLAG
+        <a href="./" class="white">
+            <h1>
+                
+            </h1>
+        </a> -->
     </div>
 
     <section class="relative-carousel">
@@ -93,14 +99,76 @@
          <br>
          <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col no-display">
                     <img src="./assets/images/pexels-khunkorn-laowisit-5233261(Our-peolple).jpg" class="img-fluid">
                 </div>
-                <div class="col white mx-auto">
-                    <p class="center">Our professional people is well training and reliable, they take care of any of your vehicles as their own vehicles.</p>
+                <div class="col white mx-auto  align-self-center">
+                    <p class="fs-3 text-center">Our professional people is well trained and reliable, we take care of any of your vehicles as our own vehicles.</p>
+                    <p class="fs-3 text-center">We deliver service at your best convenience in all Chicago area and nearby suburbs.</p>
                 </div>
              </div>
-    
+             <br>
+             <div class="row">
+                <h1 class="text-center white">Our services</h1>
+             </div>
+             <br>
+             <div class="row">
+                <div class="col"></div>
+                <div class="col-6 ">
+                    <div class="card mb-3 text-bg-dark" style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4">
+                            <img src="./assets/images/pexels-erik-mclean-4876643(3-1).jpg" class="img-fluid rounded-start">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body align-self-center">
+                              <h5 class="card-title text-center">Basic Service</h5>
+                              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col"></div>
+            </div>             
+            <div class="row">
+                <div class="col"></div>
+                <div class="col-6 ">
+                    <div class="card mb-3 text-bg-dark" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="./assets/images/pexels-erik-mclean-4876648(2-1).jpg" class="img-fluid rounded-start">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">Intermediate Service</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col"></div>
+             </div>
+             <div class="row">
+                <div class="col"></div>
+                <div class="col-6">
+                    <div class="card mb-3 text-bg-dark" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="./assets/images/pexels-erik-mclean-4876654(1-1).jpg" class="img-fluid rounded-start">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">Expensive Service</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col"></div>
+             </div>
          </div>
     </section>
 
