Cards style changed

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
          <br />
          <br>
          <div class="container">
-            <div class="row">
-                <div class="col no-display">
+            <div class="row align-self-center">
+                <div class="col no-display-small">
                     <img src="./assets/images/pexels-khunkorn-laowisit-5233261(Our-peolple).jpg" class="img-fluid">
                 </div>
                 <div class="col white mx-auto  align-self-center">
@@ -113,9 +113,8 @@
              </div>
              <br>
              <div class="row">
-                <div class="col"></div>
-                <div class="col-6 ">
-                    <div class="card mb-3 text-bg-dark" style="max-width: 540px;">
+                <div class="col ">
+                    <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
                             <img src="./assets/images/pexels-erik-mclean-4876643(3-1).jpg" class="img-fluid rounded-start">
@@ -129,12 +128,10 @@
                         </div>
                       </div>
                 </div>
-                <div class="col"></div>
             </div>             
             <div class="row">
-                <div class="col"></div>
-                <div class="col-6 ">
-                    <div class="card mb-3 text-bg-dark" style="max-width: 540px;">
+                <div class="col">
+                    <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <img src="./assets/images/pexels-erik-mclean-4876648(2-1).jpg" class="img-fluid rounded-start">
@@ -148,12 +145,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col"></div>
              </div>
              <div class="row">
-                <div class="col"></div>
-                <div class="col-6">
-                    <div class="card mb-3 text-bg-dark" style="max-width: 540px;">
+                <div class="col">
+                    <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <img src="./assets/images/pexels-erik-mclean-4876654(1-1).jpg" class="img-fluid rounded-start">
@@ -167,7 +162,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col"></div>
              </div>
          </div>
     </section>
