--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
          <div class="container">
             <div class="row align-self-center">
                 <div class="col no-display-small">
-                    <img src="./assets/images/pexels-khunkorn-laowisit-5233261(Our-peolple).jpg" class="img-fluid">
+                    <img src="./assets/images/pexels-khunkorn-laowisit-5233261(Our-peolple).jpg" class="img-fluid align-self-center">
                 </div>
                 <div class="col white mx-auto  align-self-center">
                     <p class="fs-3 text-center">Our professional people is well trained and reliable, we take care of any of your vehicles as our own vehicles.</p>
@@ -165,6 +165,33 @@
              </div>
          </div>
     </section>
-
+    <br>
+    <footer class="footer container text-bg-dark">
+        <div class="col align-self-center"><a href="tel:+17734416970" class="white">
+            <h5>
+                <i class="fa-solid fa-phone"></i> (773) 441-6970
+            </h5>
+        </a></div>
+        <div class="col align-self-center"><a href="https://www.instagram.com/vmaxmobileautodetail" class="white">
+            <h6>
+                <i class="fa-brands fa-instagram"></i> Vmaxmobileautodetail
+            </h5>
+        </a></div>
+        <div class="col align-self-center"><a href="https://www.facebook.com/vmaxmobileautodetail" class="white">
+            <h6>
+                <i class="fa-brands fa-square-facebook"></i> Vmaxmobileautodetail
+            </h5>
+        </a></div>
+        <div class="col align-self-center"><a href="https://wa.me/17734416970" class="white">
+            <h5>
+                <i class="fa-brands fa-whatsapp"></i> (773) 441-6970
+            </h5>
+        </a></div>
+        <div class="col align-self-center"><a href="mailto:vmaxmobileautodetail@gmail.com" class="white">
+            <h6>
+                <i class="fa-solid fa-envelope"></i> vmaxmobileautodetail@gmail.com
+            </h5>
+        </a></div>
+    </footer>
 </body>
 </html>
