--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
          </div>
     </section>
     <br>
-    <footer class="footer container text-bg-dark">
+    <footer class="footer text-bg-dark">
         <div class="col align-self-center"><a href="tel:+17734416970" class="white">
             <h5>
                 <i class="fa-solid fa-phone"></i> (773) 441-6970
