--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <i class="fa-solid fa-envelope"></i>
             </h1>
         </a>
-        <!-- **************************************************** PENDING MX FLAG
+        <!-- **************************************************** PENDING SPA
         <a href="./" class="white">
             <h1>
                 
@@ -57,116 +57,116 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./assets/images/carousel/Per6.jpg" class="d-block w-100 img-car">
-                    <div class="carousel-caption d-md-block">
-                        <h2>Service at your home</h2>
-                        <p>Or any place or your preference</p>
-                      </div>
+                    <img src="./assets/images/Pontiac2.jpeg" class="d-block w-100 img-car">
                   </div>
                   <div class="carousel-item">
-                    <img src="./assets/images/carousel/Per5.jpg" class="d-block w-100 img-car">
-                    <div class="carousel-caption d-md-block">
-                        <h2>Detailing service</h2>
-                        <p>Our professional staff will take care of your vehicle</p>
-                      </div>
+                    <img src="./assets/images/Pontiac3.jpeg" class="d-block w-100 img-car">
                   </div>
                   <div class="carousel-item">
-                    <img src="./assets/images/carousel/Per7.jpg" class="d-block w-100 img-car">
-                    <div class="carousel-caption d-md-block">
-                        <h2>Flexible schedule</h2>
-                        <p>We are available to fit on your routine</p>
-                      </div>
+                    <img src="./assets/images/Ford2.jpeg" class="d-block w-100 img-car">
                   </div>
                   <div class="carousel-item">
-                    <img src="./assets/images/carousel/Comm3.jpg" class="d-block w-100 img-car">
-                    <div class="carousel-caption d-md-block">
-                        <h2>Any type of vehicles</h2>
-                        <p>Personal and commercial vehicles services</p>
-                      </div>
+                    <img src="./assets/images/Pontiac1.jpeg" class="d-block w-100 img-car">
                   </div>
                   <div class="carousel-item">
-                    <img src="./assets/images/carousel/Comm4.jpg" class="d-block w-100 img-car">
-                    <div class="carousel-caption d-md-block">
-                        <h2>Reliable workers</h2>
-                        <p>Professional service in your home</p>
-                      </div>
+                    <img src="./assets/images/Ford3.jpeg" class="d-block w-100 img-car">
                   </div>
-
-                </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/Lincoln1.jpeg" class="d-block w-100 img-car">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/Lincoln2.jpeg" class="d-block w-100 img-car">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/Honda2.jpeg" class="d-block w-100 img-car">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/Honda3.jpeg" class="d-block w-100 img-car">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/Porsche2.jpeg" class="d-block w-100 img-car">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/Pontiac3.jpeg" class="d-block w-100 img-car">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/Porsche1.jpeg" class="d-block w-100 img-car">
               </div>
-         </div>
-         <br />
-         <br>
-         <div class="container">
-            <div class="row align-self-center">
-                <div class="col no-display-small">
-                    <img src="./assets/images/pexels-khunkorn-laowisit-5233261(Our-peolple).jpg" class="img-fluid align-self-center">
-                </div>
-                <div class="col white mx-auto  align-self-center">
-                    <p class="fs-3 text-center">Our professional people is well trained and reliable, we take care of any of your vehicles as our own vehicles.</p>
-                    <p class="fs-3 text-center">We deliver service at your best convenience in all Chicago area and nearby suburbs.</p>
-                </div>
-             </div>
-             <br>
-             <div class="row">
-                <h1 class="text-center white">Our services</h1>
-             </div>
-             <br>
-             <div class="row">
-                <div class="col ">
-                    <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
-                        <div class="row g-0">
-                          <div class="col-md-4">
-                            <img src="./assets/images/pexels-erik-mclean-4876643(3-1).jpg" class="img-fluid rounded-start">
-                          </div>
-                          <div class="col-md-8">
-                            <div class="card-body align-self-center">
-                              <h5 class="card-title text-center">Basic Service</h5>
-                              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                </div>
-            </div>             
-            <div class="row">
-                <div class="col">
-                    <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="./assets/images/pexels-erik-mclean-4876648(2-1).jpg" class="img-fluid rounded-start">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title text-center">Intermediate Service</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-             </div>
-             <div class="row">
-                <div class="col">
-                    <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="./assets/images/pexels-erik-mclean-4876654(1-1).jpg" class="img-fluid rounded-start">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title text-center">Expensive Service</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-             </div>
+            </div>
+            </div>
          </div>
     </section>
+    <br />
     <br>
-    <footer class="footer text-bg-dark">
+    <section class="container">
+        <div class="row align-self-center">
+            <div class="col white mx-auto  align-self-center">
+                <p class="fs-3 text-center">Our professional people is well trained and reliable, we take care of any of your vehicles as our own vehicles. We deliver service at your best convenience in all Chicago area and nearby suburbs. Call us for more information.</p>
+            </div>
+            </div>
+            <br>
+            <div class="row">
+            <h1 class="text-center white">Our Premium Hand Wash</h1>
+            </div>
+            <br>
+            <div class="row">
+            <div class="col ">
+                <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                        <img src="./assets/images/Porsche5.jpeg" class="img-fluid rounded-start">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body align-self-center">
+                                <h4 class="card-title text-center">Sedan $40</h4>
+                                    <p class="card-text">Small cars as sedan, hatchback and coupes, with no more than five passengers.</p>
+                                    <span class="small-note">*Price could change according to the condition of the vehicle </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>             
+        <div class="row">
+            <div class="col">
+                <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="./assets/images/Murano1.jpeg" class="img-fluid rounded-start">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h4 class="card-title text-center">Small and medium SUV $45 - $50</h4>
+                            <p class="card-text">Other vehicles with 5 passengers but bigger as SUVs, crossover (CUV), station wagon, minivan (MPV) and small work trucks.</p>
+                            <span class="small-note">*Price could change according to the condition of the vehicle </span>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <div class="row">
+            <div class="col">
+                <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="./assets/images/Per5.jpg" class="img-fluid rounded-start">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h4 class="card-title text-center">Large SUV and Trucks $50-$60</h4>
+                            <p class="card-text">Cars with 5+ passengers as SUVs with 3 seat rows, personal and working pickup trucks, vans, camper vans, etc. </p>
+                            <span class="small-note">*Price could change according to the condition of the vehicle </span>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <br>
+    <!-- ================================================ FOOTER -->
+    <footer class="footer text-bg-dark full-width">
         <div class="col align-self-center"><a href="tel:+17734416970" class="white">
             <h5>
                 <i class="fa-solid fa-phone"></i> (773) 441-6970
