--- a/index.html
+++ b/index.html
@@ -103,13 +103,50 @@
             <div class="col white mx-auto  align-self-center">
                 <p class="fs-3 text-center">Our professional people is well trained and reliable, we take care of any of your vehicles as our own vehicles. We deliver service at your best convenience in all Chicago area and nearby suburbs. Call us for more information.</p>
             </div>
+        </div>
+        <br>
+        <!-- ================================================ SERVICES -->
+        <div class="card text-bg-dark center-card" style="max-width: 600px;">
+            <div class="card-header text-center">
+                <h4>Includes:</h4>
+            </div>
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <ul>
+                        <li>Clean rims and tires</li>
+                        <li>Tire dressing</li>
+                        <li>Hand wash</li>
+                        <li>After dry spray paint protectant</li>
+                        <li>Windows and glass cleaning</li>
+                        <li>Vacuum interior and wipe down all through out</li>
+                        <li>Apply scent</li>
+                    </ul>
+                </blockquote>
+            </div>
+            <div class="card-header text-center">
+                <h4>Deep cleaning available:</h4>
+            </div>
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <ul>
+                        <li>Clay</li>
+                        <li>Wax</li>
+                        <li>Shampoo</li>
+                        <li>Steaming</li>
+                        <li>Engine</li>
+                        <li>Head light restoration</li>
+                    </ul>
+                </blockquote>
             </div>
             <br>
-            <div class="row">
+            <footer class="blockquote-footer text-center">All prices depends on car size and condition</footer>
+        </div>
+        <br>
+        <div class="row">
             <h1 class="text-center white">Our Premium Hand Wash</h1>
-            </div>
-            <br>
-            <div class="row">
+        </div>
+        <br>
+        <div class="row">
             <div class="col ">
                 <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
                     <div class="row g-0">
@@ -119,8 +156,8 @@
                         <div class="col-md-8">
                             <div class="card-body align-self-center">
                                 <h4 class="card-title text-center">Sedan $40</h4>
-                                    <p class="card-text">Small cars as sedan, hatchback and coupes, with no more than five passengers.</p>
-                                    <span class="small-note">*Price could change according to the condition of the vehicle </span>
+                                <p class="card-text">Small cars as sedan, hatchback and coupes, with no more than five passengers.</p>
+                                <span class="blockquote-footer">*Price could change according to the condition of the vehicle </span>
                             </div>
                         </div>
                     </div>
@@ -130,34 +167,36 @@
         <div class="row">
             <div class="col">
                 <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="./assets/images/Murano1.jpeg" class="img-fluid rounded-start">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h4 class="card-title text-center">Small and medium SUV $45 - $50</h4>
-                            <p class="card-text">Other vehicles with 5 passengers but bigger as SUVs, crossover (CUV), station wagon, minivan (MPV) and small work trucks.</p>
-                            <span class="small-note">*Price could change according to the condition of the vehicle </span>
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="./assets/images/Murano1.jpeg" class="img-fluid rounded-start">
                         </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h4 class="card-title text-center">Small and medium SUV</h4>
+                                <h4 class="card-title text-center">$45 - $50</h4>
+                                <p class="card-text">Other vehicles with 5 passengers but bigger as SUVs, crossover (CUV), station wagon, minivan (MPV) and small work trucks.</p>
+                                <span class="blockquote-footer">Price could change according to the condition of the vehicle </span>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             </div>
             <div class="row">
-            <div class="col">
-                <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="./assets/images/Per5.jpg" class="img-fluid rounded-start">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h4 class="card-title text-center">Large SUV and Trucks $50-$60</h4>
-                            <p class="card-text">Cars with 5+ passengers as SUVs with 3 seat rows, personal and working pickup trucks, vans, camper vans, etc. </p>
-                            <span class="small-note">*Price could change according to the condition of the vehicle </span>
-                        </div>
+                <div class="col">
+                    <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="./assets/images/Per5.jpg" class="img-fluid rounded-start">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h4 class="card-title text-center">Large SUV and Trucks</h4>
+                                    <h4 class="card-title text-center">$50-$60</h4>
+                                    <p class="card-text">Cars with 5+ passengers as SUVs with 3 seat rows, personal and working pickup trucks, vans, camper vans, etc. </p>
+                                    <span class="blockquote-footer">Price could change according to the condition of the vehicle </span>
+                            </div>
                         </div>
                     </div>
                 </div>
