Pictures added, footer style modified

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
-                        <img src="./assets/images/Porsche5.jpeg" class="img-fluid rounded-start">
+                        <img src="./assets/images/Cadillac3.jpg" class="img-fluid rounded-start">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body align-self-center">
@@ -175,7 +175,7 @@
                             <div class="card-body">
                                 <h4 class="card-title text-center">Small and medium SUV</h4>
                                 <h4 class="card-title text-center">$45 - $50</h4>
-                                <p class="card-text">Other vehicles with 5 passengers but bigger as SUVs, crossover (CUV), station wagon, minivan (MPV) and small work trucks.</p>
+                                <p class="card-text">Vehicles with 5 passengers but bigger as SUVs, crossover (CUV), minivan (MPV) and small work trucks.</p>
                                 <span class="blockquote-footer">Price could change according to the condition of the vehicle </span>
                             </div>
                         </div>
@@ -188,7 +188,7 @@
                     <div class="card mb-3 text-bg-dark center-card" style="max-width: 540px;">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="./assets/images/Per5.jpg" class="img-fluid rounded-start">
+                                <img src="./assets/images/Cadillac4.jpg" class="img-fluid rounded-start">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -205,32 +205,65 @@
     </section>
     <br>
     <!-- ================================================ FOOTER -->
-    <footer class="footer text-bg-dark full-width">
-        <div class="col align-self-center"><a href="tel:+17734416970" class="white">
-            <h5>
-                <i class="fa-solid fa-phone"></i> (773) 441-6970
-            </h5>
-        </a></div>
-        <div class="col align-self-center"><a href="https://www.instagram.com/vmaxmobileautodetail" class="white">
-            <h6>
-                <i class="fa-brands fa-instagram"></i> Vmaxmobileautodetail
-            </h5>
-        </a></div>
-        <div class="col align-self-center"><a href="https://www.facebook.com/vmaxmobileautodetail" class="white">
-            <h6>
-                <i class="fa-brands fa-square-facebook"></i> Vmaxmobileautodetail
-            </h5>
-        </a></div>
-        <div class="col align-self-center"><a href="https://wa.me/17734416970" class="white">
-            <h5>
-                <i class="fa-brands fa-whatsapp"></i> (773) 441-6970
-            </h5>
-        </a></div>
-        <div class="col align-self-center"><a href="mailto:vmaxmobileautodetail@gmail.com" class="white">
-            <h6>
-                <i class="fa-solid fa-envelope"></i> vmaxmobileautodetail@gmail.com
-            </h5>
-        </a></div>
+    <!-- <footer class="footer">
+        <div class="row">
+            <div class="col"></div>
+            <div class="col"></div>
+                <div class="col align-self-center"><a href="tel:+17734416970" class="white">
+                    <h5>
+                        <i class="fa-solid fa-phone"></i>
+                    </h5>
+                </a></div>
+                <div class="col align-self-center"><a href="https://www.instagram.com/vmaxmobileautodetail" class="white">
+                    <h6>
+                        <i class="fa-brands fa-instagram"></i>
+                    </h5>
+                </a></div>
+                <div class="col align-self-center"><a href="https://www.facebook.com/vmaxmobileautodetail" class="white">
+                    <h6>
+                        <i class="fa-brands fa-square-facebook"></i> 
+                    </h5>
+                </a></div>
+                <div class="col align-self-center"><a href="https://wa.me/17734416970" class="white">
+                    <h5>
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </h5>
+                </a></div>
+                <div class="col align-self-center"><a href="mailto:vmaxmobileautodetail@gmail.com" class="white">
+                    <h6>
+                        <i class="fa-solid fa-envelope"></i>
+                    </h5>
+                </a>
+            </div>
+            <div class="col"><span class="white">ⒸVmax Mobile Auto Detail</span>
+            </div>
+            <div class="col"></div>
+            <div class="col"></div>
+        </div>
+        <div class="row">
+        </div>
+    </footer> -->
+    <footer class="footer">
+        <h5 class="row">
+            <a href="tel:+17734416970" class="white">
+                    <i class="fa-solid fa-phone"></i>
+            </a>
+            <a href="https://www.instagram.com/vmaxmobileautodetail" class="white">
+                    <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://www.facebook.com/vmaxmobileautodetail" class="white">
+                    <i class="fa-brands fa-square-facebook"></i> 
+            </a>
+            <a href="https://wa.me/17734416970" class="white">
+                    <i class="fa-brands fa-whatsapp"></i>
+            </a>
+            <a href="mailto:vmaxmobileautodetail@gmail.com" class="white">
+                    <i class="fa-solid fa-envelope"></i>
+            </a>    
+        </h5>
+        <div class="row">
+            <span class="white">ⒸVmax Mobile Auto Detail</span>
+        </div>
     </footer>
 </body>
 </html>
