Spanish section created, social bar dissapear whith footer

--- a/spanish.html
+++ b/spanish.html
@@ -44,8 +44,8 @@
                 <i class="fa-solid fa-envelope"></i>
             </h1>
         </a>
-        <a href="./spanish.html" class="white x-small">
-            <p>ESP</p>
+        <a href="./" class="white x-small">
+            <p>ENG</p>
         </a>
     </div>
 
@@ -98,49 +98,49 @@
     <section class="container">
         <div class="row align-self-center">
             <div class="col white mx-auto  align-self-center">
-                <p class="fs-3 text-center">Our professional people is well trained and reliable, we take care of any of your vehicles as our own vehicles. We deliver service at your best convenience in all Chicago area and nearby suburbs. Call us for more information.</p>
+                <p class="fs-3 text-center">Nuestro equipo profesional está bien entrenado y es confiable, cuidamos cada vehículo como si fuera propio de nosotros. Entregamos servicio a la conveniciencia de nuestros clientes en Chicago y en suburbios alrededor. Contáctanos para más información.</p>
             </div>
         </div>
         <br>
         <!-- ================================================ SERVICES -->
         <div class="card text-bg-dark center-card" style="max-width: 600px;">
             <div class="card-header text-center">
-                <h4>Includes:</h4>
+                <h4>Incluye:</h4>
             </div>
             <div class="card-body">
                 <blockquote class="blockquote mb-0">
                     <ul>
-                        <li>Clean rims and tires</li>
-                        <li>Tire dressing</li>
-                        <li>Hand wash</li>
-                        <li>After dry spray paint protectant</li>
-                        <li>Windows and glass cleaning</li>
-                        <li>Vacuum interior and wipe down all through out</li>
-                        <li>Apply scent</li>
+                        <li>Limpieza de rines y llantas</li>
+                        <li>Betún en llantas</li>
+                        <li>Lavado a mano</li>
+                        <li>Protector de pintura después del secado</li>
+                        <li>WLimpieza de ventanas y espejos</li>
+                        <li>Espirado interior y limpiado exterior</li>
+                        <li>Aromatizadores</li>
                     </ul>
                 </blockquote>
             </div>
             <div class="card-header text-center">
-                <h4>Deep cleaning available:</h4>
+                <h4>Limpieza profunda disponible:</h4>
             </div>
             <div class="card-body">
                 <blockquote class="blockquote mb-0">
                     <ul>
-                        <li>Clay</li>
-                        <li>Wax</li>
+                        <li>Barro</li>
+                        <li>Cera</li>
                         <li>Shampoo</li>
-                        <li>Steaming</li>
-                        <li>Engine</li>
-                        <li>Head light restoration</li>
+                        <li>Vaporizado</li>
+                        <li>Motor</li>
+                        <li>Restauración de luces</li>
                     </ul>
                 </blockquote>
             </div>
             <br>
-            <footer class="blockquote-footer text-center">All prices depends on car size and condition</footer>
+            <footer class="blockquote-footer text-center">Todos los precios dependen del tamaño y la condición del vehículo</footer>
         </div>
         <br>
         <div class="row">
-            <h1 class="text-center white">Our Premium Hand Wash</h1>
+            <h1 class="text-center white">Nuestro lavado a mano premium</h1>
         </div>
         <br>
         <div class="row">
@@ -153,8 +153,8 @@
                         <div class="col-md-8">
                             <div class="card-body align-self-center">
                                 <h4 class="card-title text-center">Sedan $40</h4>
-                                <p class="card-text">Small cars as sedan, hatchback and coupes, with no more than five passengers.</p>
-                                <span class="blockquote-footer">Price could change according to the condition of the vehicle </span>
+                                <p class="card-text">Vehículos pequeños como sedan, hatchback y coupes, con no más de cinco pasajeros.</p>
+                                <span class="blockquote-footer">El precio puede variar de acuerdo a las condiciones del vehículo </span>
                             </div>
                         </div>
                     </div>
@@ -170,10 +170,10 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h4 class="card-title text-center">Small and medium SUV</h4>
+                                <h4 class="card-title text-center">Pequeñas y medianas SUV</h4>
                                 <h4 class="card-title text-center">$45 - $50</h4>
-                                <p class="card-text">Vehicles with 5 passengers but bigger as SUVs, crossover (CUV), minivan (MPV) and small work trucks.</p>
-                                <span class="blockquote-footer">Price could change according to the condition of the vehicle </span>
+                                <p class="card-text">Vehiculos con 5 pasajeros y más grandes como SUVs, crossover (CUV), minivan (MPV) y pequeñas trucks de trabajo.</p>
+                                <span class="blockquote-footer">El precio puede variar de acuerdo a las condiciones del vehículo </span>
                             </div>
                         </div>
                     </div>
@@ -189,10 +189,10 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h4 class="card-title text-center">Large SUV and Trucks</h4>
+                                    <h4 class="card-title text-center">SUV y Trucks</h4>
                                     <h4 class="card-title text-center">$50-$60</h4>
-                                    <p class="card-text">Cars with 5+ passengers as SUVs with 3 seat rows, personal and working pickup trucks, vans, camper vans, etc. </p>
-                                    <span class="blockquote-footer">Price could change according to the condition of the vehicle </span>
+                                    <p class="card-text">Vehículos con 5+ pasajeros como SUVs con 3 filas de sillas, pickips personales y de trabajo, vans, camper vans, etc.</p>
+                                    <span class="blockquote-footer">El precio puede variar de acuerdo a las condiciones del vehículo </span>
                             </div>
                         </div>
                     </div>
