--- a/spanish.html
+++ b/spanish.html
@@ -98,7 +98,8 @@
     <section class="container">
         <div class="row align-self-center">
             <div class="col white mx-auto  align-self-center">
-                <p class="fs-3 text-center">Nuestro equipo profesional está bien entrenado y es confiable, cuidamos cada vehículo como si fuera propio de nosotros. Entregamos servicio a la conveniciencia de nuestros clientes en Chicago y en suburbios alrededor. Contáctanos para más información.</p>
+                <p class="fs-3 text-center">Nuestro personal está capacitado y es confiable, cuidamos cada vehículo como si fuera el nuestro! Tenemos servicio a la conveniencia de nuestros clientes en Chicago y en suburbios cercanos. Contáctanos para más información. 
+                    <!-- Nuestro equipo profesional está bien entrenado y es confiable, cuidamos cada vehículo como si fuera propio de nosotros. Entregamos servicio a la conveniciencia de nuestros clientes en Chicago y en suburbios alrededor. Contáctanos para más información.</p> -->
             </div>
         </div>
         <br>
@@ -110,13 +111,13 @@
             <div class="card-body">
                 <blockquote class="blockquote mb-0">
                     <ul>
-                        <li>Limpieza de rines y llantas</li>
-                        <li>Betún en llantas</li>
                         <li>Lavado a mano</li>
+                        <li>Limpieza de rines y llantas</li>
+                        <li>Lustre de llantas</li>
                         <li>Protector de pintura después del secado</li>
-                        <li>WLimpieza de ventanas y espejos</li>
-                        <li>Espirado interior y limpiado exterior</li>
-                        <li>Aromatizadores</li>
+                        <li>Limpieza de ventanas y espejos</li>
+                        <li>Aspirado y limpiado interior</li>
+                        <li>Aromatizante</li>
                     </ul>
                 </blockquote>
             </div>
@@ -129,7 +130,7 @@
                         <li>Barro</li>
                         <li>Cera</li>
                         <li>Shampoo</li>
-                        <li>Vaporizado</li>
+                        <li>Lavado de tapicería a vapor</li>
                         <li>Motor</li>
                         <li>Restauración de luces</li>
                     </ul>
@@ -153,7 +154,7 @@
                         <div class="col-md-8">
                             <div class="card-body align-self-center">
                                 <h4 class="card-title text-center">Sedan $40</h4>
-                                <p class="card-text">Vehículos pequeños como sedan, hatchback y coupes, con no más de cinco pasajeros.</p>
+                                <p class="card-text">Vehículos pequeños como sedan, hatchback y coupés, con no más de cinco pasajeros.</p>
                                 <span class="blockquote-footer">El precio puede variar de acuerdo a las condiciones del vehículo </span>
                             </div>
                         </div>
@@ -172,7 +173,7 @@
                             <div class="card-body">
                                 <h4 class="card-title text-center">Pequeñas y medianas SUV</h4>
                                 <h4 class="card-title text-center">$45 - $50</h4>
-                                <p class="card-text">Vehiculos con 5 pasajeros y más grandes como SUVs, crossover (CUV), minivan (MPV) y pequeñas trucks de trabajo.</p>
+                                <p class="card-text">Vehiculos con 5 pasajeros y más grandes como SUVs, crossover (CUV), minivan (MPV) y camionetas pequeñas de trabajo.</p>
                                 <span class="blockquote-footer">El precio puede variar de acuerdo a las condiciones del vehículo </span>
                             </div>
                         </div>
@@ -189,9 +190,9 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h4 class="card-title text-center">SUV y Trucks</h4>
+                                    <h4 class="card-title text-center">SUV y camionetas</h4>
                                     <h4 class="card-title text-center">$50-$60</h4>
-                                    <p class="card-text">Vehículos con 5+ pasajeros como SUVs con 3 filas de sillas, pickips personales y de trabajo, vans, camper vans, etc.</p>
+                                    <p class="card-text">Vehículos con 5+ pasajeros como SUVs con 3 filas de asientos, camionetas (pick-ups) personales y de trabajo, vans, camper vans, etc.</p>
                                     <span class="blockquote-footer">El precio puede variar de acuerdo a las condiciones del vehículo </span>
                             </div>
                         </div>
