Facebook link in footer updated

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <a href="https://www.instagram.com/vmaxmobileautodetail" class="white">
                     <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="https://www.facebook.com/vmaxmobileautodetail" class="white">
+            <a href="https://www.facebook.com/profile.php?id=100079716830615" class="white">
                     <i class="fa-brands fa-square-facebook"></i> 
             </a>
             <a href="https://wa.me/17734416970" class="white">
